fix text-wrap in dropdown

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,15 +27,19 @@ li.nav-item.dropdown:hover ul.dropdown-menu{
 	display: block;
 }
 ul.dropdown-menu.subnav a{
+	width: 100%;
+	white-space: nowrap;
 	display: block;
-	padding-left: .5em;
+	padding: .25em 1em;
 	color: #333;
 }
 
 ul.dropdown-menu.subnav li:hover{
   background-color: #333;
 }
-
+ul.dropdown-menu.subnav li{
+    width: 100%;
+}
 ul.dropdown-menu.subnav li:hover  a{
   color: #fff;
   text-decoration: none;
